--- a/pii.html
+++ b/pii.html
@@ -10,11 +10,14 @@
         }
       </style>
   </head>
-
   <body>
+    <ul>
+      <li><a href="/index.html">AI Editor</a></li>
+      <li><a href="./pii.html">AI PII</a></li>
+    </ul>
     <iframe
       style="width: 100vw; height: 100vh"
-      src="http://172.16.1.225:2409/?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjE3LCJyb2xlIjoidXNlciIsImhhc2giOiJkNzgyNWRmZDBiOGYzNmI1YTQxNjJhOGRkMDkxOTkzYzc0M2JkZjFlMWMyYWM1NjgyOGMwZTAyYzhjYWRiMjViIiwiaWF0IjoxNzE5MTEyNzEwLCJleHAiOjE3MTkxOTkxMTB9.0BwbQyta7_-8RWZKEO4zbiuohrUNywD65kdoLzx_R24"
+      src="https://app.ai-pii-app.sotatek.works?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjE3LCJyb2xlIjoidXNlciIsImhhc2giOiJhZDZjODk2MGRlZjM1YTFmYmQ1MTRlZjdkYWNkZjA0MTU4ZTE1Mjk1YjBlZGVkZWNlNTRmNjU4ODZjNTg2OTFjIiwiaWF0IjoxNzE5Mjc5NzkzLCJleHAiOjE3MTkzNjYxOTN9._1Lx-qd7uZBNsb0_INPGdc8eCpm5OnmnhJUyD5i8HYM"
     />
   </body>
 </html>
