--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         }
       </style>
   </head>
-
   <body>
-    <h5>Test nhúng iframe</h5>
+    <ul>
+      <li><a href="/index.html">AI Editor</a></li>
+      <li><a href="./pii.html">AI PII</a></li>
+    </ul>
     <iframe
       style="width: 100vw; height: 100vh"
       src="https://dev.ai-code-editor.sotatek.works/?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjE3LCJyb2xlIjoidXNlciIsImhhc2giOiIyYzljZWNlMGQxNTBhMjIxOWJmNzM0NWI0ZWMyZTY1MGU5NWU3MDQwZjc1YWRlYWI1ODlmZTQwMTg0ZGE5ZWZlIiwiaWF0IjoxNzE5MTkyODYyLCJleHAiOjE3MTkyNzkyNjJ9.cmSfU0O0ZDMf_dqbGeNKb0YzYjt-qvQHtp-iYxAYqIE"
