--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
     <iframe
       style="width: 100vw; height: 100vh"
-      src="https://dev.ai-code-editor.sotatek.works/?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjE3LCJyb2xlIjoidXNlciIsImhhc2giOiIyYzljZWNlMGQxNTBhMjIxOWJmNzM0NWI0ZWMyZTY1MGU5NWU3MDQwZjc1YWRlYWI1ODlmZTQwMTg0ZGE5ZWZlIiwiaWF0IjoxNzE5MTkyODYyLCJleHAiOjE3MTkyNzkyNjJ9.cmSfU0O0ZDMf_dqbGeNKb0YzYjt-qvQHtp-iYxAYqIE"
+      src="https://dev.ai-code-editor.sotatek.works/?app_id=200&access_key=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjE3LCJyb2xlIjoidXNlciIsImhhc2giOiJhZDZjODk2MGRlZjM1YTFmYmQ1MTRlZjdkYWNkZjA0MTU4ZTE1Mjk1YjBlZGVkZWNlNTRmNjU4ODZjNTg2OTFjIiwiaWF0IjoxNzE5Mjc5NzkzLCJleHAiOjE3MTkzNjYxOTN9._1Lx-qd7uZBNsb0_INPGdc8eCpm5OnmnhJUyD5i8HYM"
     />
   </body>
 </html>
